fix image scroll on mobile

--- a/src/output.css
+++ b/src/output.css
@@ -763,6 +763,10 @@ video {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
+.overflow-auto {
+  overflow: auto;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1055,6 +1059,10 @@ video {
     row-gap: 4rem;
   }
 
+  .sm\:overflow-auto {
+    overflow: auto;
+  }
+
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -1161,6 +1169,10 @@ video {
 
   .lg\:gap-y-16 {
     row-gap: 4rem;
+  }
+
+  .lg\:overflow-auto {
+    overflow: auto;
   }
 
   .lg\:overflow-hidden {
